[package]
name = "uac"
version = "0.1.2"
authors = ["Harenayo"]
edition = "2021"
description = "A command to run a program as administrator in Windows"
readme = "README.md"
repository = "https://github.com/harenayo/uac"
license = "MIT"

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Environment",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
]

[dependencies.keymacro]
git = "https://github.com/harenayo/keymacro"
tag = "0.1.0"
